--- a/react-portfolio/src/components/Layout/index.scss
+++ b/react-portfolio/src/components/Layout/index.scss
@@ -40,17 +40,8 @@
 }
 
 .about-page,
-.contact-page {
-  .text-zone {
-    position: absolute;
-    left: 10%;
-    top: 50%;
-    transform: rotateY(-50%);
-    width: 35%;
-    vertical-align: middle;
-    display: table-cell;
-    max-height: 90%;
-
+.contact-page,
+.portfolio-page {
     h1 {
       font-size: 53px;
       font-family: 'Coolvetice';
@@ -105,6 +96,16 @@
         animation-delay: 1.3s;
       }
     }
+
+    .text-zone {
+      position: absolute;
+      left: 10%;
+      top: 50%;
+      transform: rotateY(-50%);
+      width: 35%;
+      vertical-align: middle;
+      display: table-cell;
+      max-height: 90%;
   }
 
   .text-animate-hover {
