--- a/react-portfolio/src/App.scss
+++ b/react-portfolio/src/App.scss
@@ -18,9 +18,14 @@ $primary-color: #ffd700;
   src: url('./assets/fonts/CoolveticaRg-Regular.woff2') format('woff2');
 }
 
+@font-face {
+  font-family: 'DotGothic16', sans-serif;
+  src: url('./assets/fonts/DotGothic16-Regular.ttf') format('ttf');
+}
+
 input,
 textarea {
-  font-family: 'helvetica-neu';
+  font-family: 'helvetica-neue';
 }
 
 .loader-active {
