--- a/react-portfolio/src/components/Layout/index.scss
+++ b/react-portfolio/src/components/Layout/index.scss
@@ -35,7 +35,7 @@
   h1 {
     font-size: 53px;
     font-family: 'Coolvetice';
-    color: #ffd700;
+    color: #BBE7B1;
     font-weight: 400;
     margin-top: 0;
     position: relative;
