--- a/react-portfolio/src/components/Contact/index.scss
+++ b/react-portfolio/src/components/Contact/index.scss
@@ -36,7 +36,7 @@
   input[type='email'] {
     width: 100%;
     border: 0;
-    background: #115173;
+    background: #23656C;
     height: 50px;
     font-size: 16px;
     color: #fff;
@@ -47,7 +47,7 @@
   textarea {
     width: 100%;
     border: 0;
-    background: #115173;
+    background: #23656C;
     height: 50px;
     font-size: 16px;
     color: #fff;
@@ -57,13 +57,13 @@
   }
 
   .flat-button {
-    color: #ffd700;
+    color: #BBE7B1;
     background: 0 0;
     font: 11px;
     letter-spacing: 3px;
     text-decoration: none;
     padding: 8px 10px;
-    border: 1px solid #ffd700;
+    border: 1px solid #BBE7B1;
     float: right;
     border-radius: 4px;
   }
@@ -89,7 +89,7 @@
     font-size: 16px;
     display: block;
     padding-top: 20px;
-    color: #ffd700;
+    color: #BBE7B1;
   }
 }
 
