--- a/react-portfolio/src/components/Home/index.scss
+++ b/react-portfolio/src/components/Home/index.scss
@@ -26,7 +26,7 @@
   }
 
   h2 {
-    color: #8d8d8d;
+    color: #999999;
     margin-top: 20px;
     font-weight: 400;
     font-size: 11px;
@@ -36,21 +36,21 @@
   }
 
   .flat-button {
-    color: #ffd700;
+    color: #BBE7B1;
     font-size: 13px;
     font-weight: 400;
     letter-spacing: 4px;
     font-family: 'sans serif';
     text-decoration: none;
     padding: 10px 8px;
-    border: 1px solid #ffd700;
+    border: 1px solid #BBE7B1;
     margin-top: 25px;
     float: left;
     animation: fadeIn 1s 1.8s backwards;
     white-space: nowrap;
 
     &:hover {
-      background: #ffd700;
+      background: #BBE7B1;
       color: #333;
     }
   }
