--- a/react-portfolio/src/components/About/index.scss
+++ b/react-portfolio/src/components/About/index.scss
@@ -61,19 +61,22 @@
     transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
   }
   16% {
-    transform: rotateX(0deg) rotateY(-90deg) rotateZ(0deg);
+    transform: rotateX(0deg) rotateY(90deg) rotateZ(0deg);
   }
   33% {
-    transform: rotateY(-90deg) rotateZ(90deg);
+    transform: rotateY(90deg) rotateZ(90deg);
   }
   50% {
-    transform: rotateY(-180deg) rotateZ(90deg);
+    transform: rotateY(90deg) rotateZ(180deg);
   }
   66% {
-    transform: rotateY(-270deg) rotateZ(90deg);
+    transform: rotateY(180deg) rotateZ(180deg);
   }
   83% {
-    transform: rotateX(90deg);
+    transform: rotateX(-90deg), rotateY(180deg), rotateZ(180deg);
+  }
+  100% {
+    transform: rotateY(180deg), rotateZ(180deg), rotateX(-180deg);
   }
 }
 
