--- a/react-portfolio/src/components/Home/index.scss
+++ b/react-portfolio/src/components/Home/index.scss
@@ -90,16 +90,7 @@
       left: 0;
 
       .solid-logo {
-        bottom: auto;
-        left: 0;
-        margin: auto;
-        opacity: 0;
-        position: absolute;
-        right: auto;
-        top: 68px;
-        width: 100%;
-        z-index: 1;
-        top: 68px;
+        display: none;
       }
 
       svg {
