font size resolution problem

--- a/react-portfolio/src/components/Home/index.scss
+++ b/react-portfolio/src/components/Home/index.scss
@@ -72,6 +72,10 @@
       box-sizing: border-box;
     }
 
+    h1 {
+      font-size: 60px;
+    }
+
     .flat-button {
       float: none;
       display: block;
