--- a/react-portfolio/src/components/Layout/index.scss
+++ b/react-portfolio/src/components/Layout/index.scss
@@ -105,6 +105,10 @@
         padding: 20px;
         box-sizing: border-box;
       }
+
+      h1 {
+        font-size: 60px;
+      }
     }
   }
 }
